--- a/src/todo/appsettings.json
+++ b/src/todo/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "PostgresConnection": "Server=postgres; Port=5432; User Id=myuser; Password=none; Database=todo"
+    "PostgresConnection": "Server=localhost; Port=5432; User Id=myuser; Password=none; Database=todo"
   },
   "Logging": {
     "IncludeScopes": false,
