--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
-            "program": "${workspaceRoot}/bin/Debug/netcoreapp1.1/asp-net-core-tp.dll",
+            "program": "${workspaceRoot}/src/todo/bin/Debug/netcoreapp1.1/asp-net-core-tp.dll",
             "args": [],
             "cwd": "${workspaceRoot}",
             "stopAtEntry": false,
