--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,5 +1,5 @@
-FROM microsoft/aspnetcore
+FROM microsoft/aspnetcore:1.1.1
 WORKDIR /app
 COPY build .
-EXPOSE 5000
+EXPOSE 80
 ENTRYPOINT ["dotnet", "todo.dll"]
