--- a/src/todo/todo.csproj
+++ b/src/todo/todo.csproj
@@ -30,6 +30,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.2.0">
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="2.1.1 " />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL.Design" Version="2.0.0-preview1 " />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.2.0" />
