Added simple console logging and environment variables configurability

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,15 +1,14 @@
 {
-    "version": "0.1.0",
-    "command": "dotnet",
-    "isShellCommand": true,
+    "version": "2.0.0",
     "args": [],
     "tasks": [
         {
-            "taskName": "build",
+            "label": "build",
+            "command": "dotnet",
             "args": [
+                "build",
                 "${workspaceRoot}/project.json"
             ],
-            "isBuildCommand": true,
             "problemMatcher": "$msCompile"
         }
     ]
