--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -6,6 +6,8 @@ services:
         - "5000:80"
     depends_on:
         - todo-postgres
+    environment:
+        - ConnectionStrings__PostgresConnection=Server=postgres; Port=5432; User Id=myuser; Password=none; Database=todo
   todo-postgres:
     image: "postgres"
     container_name: "postgres"
