--- a/src/todo.health/appsettings.json
+++ b/src/todo.health/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "Health":
+  {
+    "Url": "http://localhost:5000/health"
   }
 }
