--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '2'
 services:
   todo-web:
-    build: .
+    build: todo.web
     ports:
         - "5000:80"
     depends_on:
@@ -18,3 +18,9 @@ services:
         - POSTGRES_PASSWORD=none
         - POSTGRES_DB=todo
         - PGDATA=/var/lib/postgresql/data/pgdata
+  todo-health:
+    build: todo.health
+    depends_on:
+        - todo-web
+    environment:
+        - Health__Url=http://todo-web:80/health
